Homepage intro card and styling

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,4 @@
-/*
-    You can add your own custom styles here.
-*/
+/* Larger padding for homepage intro card */
+.intro-card {
+  padding: 5rem 3rem;
+}
